// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton component should render IconButton component disabled 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={true}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with background style "float" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="float"
    disabled={false}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with background style "none" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with background style "overlay" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="overlay"
    disabled={false}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with color "default" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with color "highEmphasis" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with color "light" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with color "primary" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with size "medium" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="medium"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with size "semi" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="semi"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with size "semiX" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="semiX"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;

exports[`IconButton component should render IconButton component with size "small" 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="icon-button"
>
  <View
    backgroundStyle="none"
    disabled={false}
    size="small"
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 50,
          "height": "px",
          "justifyContent": "center",
          "width": "px",
        },
        Object {
          "elevation": 1,
        },
      ]
    }
    testID="icon-button-background"
  >
    <Text
      accessibilityHint="Go to account page"
      accessibilityLabel="Press view your account"
      accessibilityRole="imagebutton"
      color="highEmphasis"
      name="outlined-finance-bank"
      size="standard"
      testID="icon-button-icon"
    >
      outlined-finance-bank
    </Text>
  </View>
</View>
`;
